# howl

./: .agignore  .gitattributes  .gitignore  .ignore  .luacheckrc  .travis.yml  Changelog.md  Guardfile  LICENSE.md  README.md  Spookfile  azure-pipelines.yml  io.howl.Editor.yaml  lint_config.moon  win.md
bundles/base_modes/: README.md  init.moon  mode_definitions.moon  style_aliases.moon
bundles/basic_modes/: README.md  init.moon  mode_definitions.moon  style_aliases.moon
bundles/c/: LICENSE  c_lexer.moon  c_mode.moon  init.moon
bundles/clojure/: LICENSE.md  README.md  bencode.lua  clojure_mode.moon  clojure_parser.moon  init.moon  nrepl.moon  nrepl_completer.moon  nrepl_port_input.moon
bundles/clojure-mode/: clojure_mode.moon  init.moon  nrepl.moon  nrepl_completer.moon  nrepl_port_input.moon
bundles/coffeescript/: LICENSE  coffeescript_lexer.moon  coffeescript_mode.moon  init.moon  (+1 more)
bundles/haskell/misc/: example.cabal  example.hs
lexers/: Io.lua  actionscript.lua  ada.lua  antlr.lua  apdl.lua  applescript.lua  asp.lua  awk.lua  b_lang.lua  bash.lua  batch.lua  bibtex.lua  boo.lua  caml.lua  chuck.lua  cmake.lua  coffeescript.lua  container.lua  context.lua  cpp.lua  csharp.lua  css.lua  cuda.lua  desktop.lua  diff.lua  django.lua  dmd.lua  dot.lua  eiffel.lua  erlang.lua  forth.lua  fortran.lua  fsharp.lua  gap.lua  gettext.lua  glsl.lua  gnuplot.lua  go.lua  groovy.lua  gtkrc.lua  (+50 more)
site/: Gemfile  config.rb
spec/: application_spec.moon  bindings_spec.moon  breadcrumbs_spec.moon  buffer_context_spec.moon  buffer_lines_spec.moon  buffer_markers_spec.moon  buffer_spec.moon  bufferlines_spec.moon  bundle_spec.moon  chunk_spec.moon  clipboard_spec.moon  command_spec.moon  completer_spec.moon  completion_spec.moon  config_spec.moon  dev_spec.moon  dispatch_spec.moon  file_search_spec.moon  formatting_spec.moon  globals_spec.moon  hash_spec.moon  input_spec.moon  inputs_spec.moon  inspect_spec.moon  interact_spec.moon  janitor_spec.moon  json_rpc_spec.moon  keyhandler_spec.moon  log_spec.moon  lsp_spec.moon  memory-test.moon  mode_spec.moon  offsets_spec.moon  project_spec.moon  regex_spec.moon  scintilla_spec.moon  settings_spec.moon  signal_spec.moon  styler_spec.moon  sys_spec.moon  (+3 more)
src/: 001-luajit-ffi-win32-walk-all-modules.patch  002-luajit-win32-build-static.patch  Makefile  gtk_ui.c  howl.rc  io.howl.Editor.yaml  main.c  main.h  process_helpers.c  sci.c  script.lua  vilu.h  wininst.iss
themes/: blue.moon  default.moon
(+1919 files in other folders)
